crates/carta/tests/snapshots/golden_writer__html__common__link-in-link.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p><a href="u1">outer <span id="iid" class="ic">inner</span> end</a></p>
