crates/carta/tests/snapshots/golden_writer__html__common__link-title-attr.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p><a href="http://example.com" id="l" class="ext"
title="a title">text</a></p>
