crates/carta/tests/snapshots/golden_writer__html__common__nonascii-escape.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>café résumé naïve</p>
