crates/carta/tests/snapshots/golden_writer__html__common__ordered-lower-roman.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol type="i">
<li>one</li>
<li>two</li>
</ol>
