crates/carta/tests/snapshots/golden_writer__html__common__ordered-nested.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol type="1">
<li><p>outer</p>
<ol type="1">
<li>inner one</li>
<li>inner two</li>
</ol></li>
</ol>
