crates/carta/tests/snapshots/golden_writer__html__common__ordered-two-parens.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<ol type="1">
<li>one</li>
<li>two</li>
</ol>
