crates/carta/tests/snapshots/golden_writer__html__common__paragraph.snap
---
source: crates/carta/tests/golden_writer.rs
expression: output
---
<p>a simple paragraph with words</p>
